src/test/deca/context/valid/homemade/test/test_valid_instanceof_autre_class.deca
// test valide de la règle instance of

class A{

}
class B{

}

{
    A a = new A();
    println(a instanceof B);
}