src/test/deca/context/invalid/homemade/tests/test_invalid_instanceof_int.deca
// test invalide de la règle instance of



{
    int a = 8;
    println(a instanceof int);
}